Restore dashboard control

--- a/code/notebook.ipynb
+++ b/code/notebook.ipynb
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "## from dashboard import Dashboard\n",
+    "from dashboard import Dashboard\n",
     "import numpy as np\n",
     "from skimage.io import imread, imsave\n",
     "from scipy import sparse\n",
