--- a/code/v2/notebook.ipynb
+++ b/code/v2/notebook.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b317d2eff904f258dcd0c7f24093dc4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(FileUpload(value={}, description='Upload an image for Analysis'), IntText(value=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec3c0d0f3d384dd19ec7560813637155",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from dashboard import Dashboard\n",
     "# from sidecar import Sidecar\n",
@@ -47,6 +18,7 @@
     "from ipywidgets import Accordion, FileUpload, Label, Output, IntProgress, IntSlider, Tab, IntText, Text, Button, Dropdown, AppLayout, Box, SelectionSlider, FloatSlider, Button, HBox, VBox\n",
     "from traitlets import default, List, HasTraits\n",
     "from analysis_driver import AnalysisDriver\n",
+    "from visible_optimizer import VisibleOptimizer\n",
     "\n",
     "\n",
     "\n",
@@ -89,8 +61,8 @@
     "#         print(histo_widget)\n",
     "\n",
     "        self.t_file_upload = FileUpload(description='Upload an image for Analysis')\n",
-    "        self.width_field = IntText(description='Image Width', value=1512)\n",
-    "        self.height_field = IntText(description='Image Height', value=2016)\n",
+    "        self.width_field = IntText(description='Image Width', value=2626)\n",
+    "        self.height_field = IntText(description='Image Height', value=3674)\n",
     "        self.header = HBox(children=[self.t_file_upload, self.width_field, self.height_field], height=\"100%\")\n",
     "        self.debug_output = Output()\n",
     "        self.progress_box = HBox(children=[])\n",
@@ -102,11 +74,11 @@
     "            children=[self.progress_box, self.tab_analysis_results, self.debug_output])\n",
     "                      # histo_widget, self.debug_output])\n",
     "        \n",
-    "#         self.center_panel = VBox(children=[self.acc_open_files])\n",
-    "#         self.right_panel = VBox(children=[])\n",
-    "#         self.app_layout = AppLayout(\n",
-    "#             header=self.header, left_sidebar=None, center=self.center_panel, right_sidebar=self.right_panel, \n",
-    "#             pane_widths=[\"3%\", \"72%\", \"25%\"], pane_heights=[\"15%\", \"80%\", \"5%\"], footer=None, height=\"480px\")\n",
+    "        self.center_panel = VBox(children=[self.acc_open_files])\n",
+    "        self.right_panel = VBox(children=[])\n",
+    "        self.app_layout = AppLayout(\n",
+    "             header=self.header, left_sidebar=None, center=self.center_panel, right_sidebar=self.right_panel, \n",
+    "             pane_widths=[\"3%\", \"72%\", \"25%\"], pane_heights=[\"15%\", \"80%\", \"5%\"], footer=None, height=\"480px\")\n",
     "#         self.app_tab = Stacked(children=[self.app_layout, self.debug_output])\n",
     "#         self.app_tab.titles=[\"Main\", \"Debug\"]\n",
     "        \n",
@@ -140,7 +112,7 @@
     "                }\n",
     "                with self.debug_output as dbg:\n",
     "                    print(f\"Analysis in progress for {key}\")\n",
-    "                self.center_panel.children.insert(0, progress_bar)\n",
+    "                #self.center_panel.children.append(0, progress_bar)\n",
     "                display(progress_bar)\n",
     "                analyzer.run_analysis()\n",
     "                results = analyzer.collect_widgets()\n",
@@ -168,32 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9675b00485749e5811f8a069e0d9e16",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bar\n",
-      "Bam\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "key = \"900_accum16_20200212_163257.png\"\n",
     "output = Output(height=\"200px\")\n",
@@ -202,8 +151,9 @@
     "        description=f\"Optimizing: {key}\", \n",
     "        orientation='horizontal',\n",
     "        bar_style='info')\n",
-    "progress_bar.value = 0\n",
+    "progress_bar.value = 50\n",
     "display(output)\n",
+    "display(progress_bar)\n",
     "print(\"Bar\")\n",
     "with output as op:\n",
     "    print(\"Foo\")\n",
@@ -212,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,17 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Accordion', 'AppLayout', 'Audio', 'BoundedFloatText', 'BoundedIntText', 'Box', 'Button', 'ButtonStyle', 'CallbackDispatcher', 'Checkbox', 'Color', 'ColorPicker', 'Combobox', 'Controller', 'CoreWidget', 'DOMWidget', 'DatePicker', 'Datetime', 'Dropdown', 'FileUpload', 'FloatLogSlider', 'FloatProgress', 'FloatRangeSlider', 'FloatSlider', 'FloatText', 'GridBox', 'GridspecLayout', 'HBox', 'HTML', 'HTMLMath', 'Image', 'IntProgress', 'IntRangeSlider', 'IntSlider', 'IntText', 'Label', 'Layout', 'NumberFormat', 'Output', 'Password', 'Play', 'RadioButtons', 'Select', 'SelectMultiple', 'SelectionRangeSlider', 'SelectionSlider', 'SliderStyle', 'Style', 'Tab', 'Text', 'Textarea', 'ToggleButton', 'ToggleButtons', 'ToggleButtonsStyle', 'TwoByTwoLayout', 'VBox', 'Valid', 'ValueWidget', 'Video', 'Widget', '__builtins__', '__cached__', '__doc__', '__file__', '__jupyter_widgets_base_version__', '__jupyter_widgets_controls_version__', '__loader__', '__name__', '__package__', '__path__', '__protocol_version__', '__spec__', '__version__', '_handle_ipython', '_version', 'dlink', 'docutils', 'domwidget', 'fixed', 'get_ipython', 'handle_kernel', 'interact', 'interact_manual', 'interaction', 'interactive', 'interactive_output', 'jsdlink', 'jslink', 'link', 'load_ipython_extension', 'os', 'register', 'register_comm_target', 'trait_types', 'util', 'valuewidget', 'version_info', 'widget', 'widget_bool', 'widget_box', 'widget_button', 'widget_color', 'widget_controller', 'widget_core', 'widget_date', 'widget_description', 'widget_float', 'widget_int', 'widget_layout', 'widget_link', 'widget_media', 'widget_output', 'widget_selection', 'widget_selectioncontainer', 'widget_serialization', 'widget_string', 'widget_style', 'widget_templates', 'widget_upload', 'widgets']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets\n",
     "\n",
@@ -283,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
